Update: changed website title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Interest Rate Calculator</title>
+    <title>Interest Calculator</title>
     <link rel = "stylesheet" href="css.css">
 </head>
 <body>
